[workspace]
resolver = "2"

members = [
  "1_hello_world",
  "2_guessing_game",
  "3_common_concepts",
  "4_ownership",
  "5_structs",
  "6_enums_pattern_matching",
  "7_module_system",
  "8_collections",
  "9_error_handling",
  "10_generics",
  "11_traits",
  "12_lifetimes",
  "13_tests",
  "14_minigrep_cli_app",
  "15_closures",
  "16_iterators",
  "17_publishing",
  "18_box_smart_pointer",
  "19_deref_trait",
  "20_drop_trait",
  "21_reference_counting",
  "22_interior_mutability",
  "23_reference_cycles",
  "24_threads",
  "25_message_passing",
  "26_sharing_state",
  "27_oop",
  "28_trait_objects",
  "29_state_design_pattern",
  "30_patterns_and_matching",
  "31_pattern_syntax",
  "32_writing_unsafe",
  "33_advanced_traits",
  "34_advanced_types",
  "35_advanced_functions_and_closures",
]
