[package]
name = "monntecc_crate"
description = "Learn demonstration create"
license = "Unlicense"
version = "0.1.0"
authors = ["monntecc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
